<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.legistrate</groupId>
    <artifactId>mb2g-testing</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <junit.version>5.3.2</junit.version>
        <junit.platform.version>1.3.2</junit.platform.version>
    </properties>

    <dependencies>
        <dependency>
		    <groupId>org.codehaus.groovy</groupId>
		    <artifactId>groovy-all</artifactId>
		    <version>2.5.4</version>
		    <type>pom</type>
		</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
		    <groupId>org.spockframework</groupId>
		    <artifactId>spock-core</artifactId>
		    <version>1.3-groovy-2.5</version>
		    <scope>test</scope>
		</dependency>
    </dependencies>

    <build>
	    <pluginManagement>
	        <plugins>
	            <plugin>
	            	<groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.8.0</version><!-- 3.1 is the minimum -->
	                <configuration>
	                    <compilerId>groovy-eclipse-compiler</compilerId>
	                    <compilerArguments>
	                        <indy/><!-- optional; supported by batch 2.4.12-04+ -->
	                        <configScript>config.groovy</configScript><!-- optional; supported by batch 2.4.13-02+ -->
	                    </compilerArguments>
	                </configuration>
	                <dependencies>
	                    <dependency>
	                        <groupId>org.codehaus.groovy</groupId>
	                        <artifactId>groovy-eclipse-compiler</artifactId>
	                        <version>3.0.0-01</version>
	                    </dependency>
	                    <dependency>
	                        <groupId>org.codehaus.groovy</groupId>
	                        <artifactId>groovy-eclipse-batch</artifactId>
	                        <version>2.5.4-01</version>
	                    </dependency>
	                </dependencies>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-surefire-plugin</artifactId>
	                <version>2.22.1</version>
	                <configuration>
	                	<argLine>
	                		--illegal-access=permit
	                	</argLine>
	                </configuration>
	                <dependencies>
		                <dependency>
				            <groupId>org.junit.platform</groupId>
				            <artifactId>junit-platform-surefire-provider</artifactId>
				            <version>${junit.platform.version}</version>
				        </dependency>
	                </dependencies>
	            </plugin>
	            <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
	            <plugin>
	            	<groupId>org.eclipse.m2e</groupId>
	            	<artifactId>lifecycle-mapping</artifactId>
	            	<version>1.0.0</version>
	            	<configuration>
	            		<lifecycleMappingMetadata>
	            			<pluginExecutions>
	            				<pluginExecution>
	            					<pluginExecutionFilter>
	            						<groupId>
	            							org.apache.maven.plugins
	            						</groupId>
	            						<artifactId>
	            							maven-compiler-plugin
	            						</artifactId>
	            						<versionRange>
	            							[3.8.0,)
	            						</versionRange>
	            						<goals>
	            							<goal>testCompile</goal>
	            						</goals>
	            					</pluginExecutionFilter>
	            					<action>
	            						<execute><runOnIncremental>false</runOnIncremental></execute>
	            					</action>
	            				</pluginExecution>
	            				<pluginExecution>
	            					<pluginExecutionFilter>
	            						<groupId>
	            							org.apache.maven.plugins
	            						</groupId>
	            						<artifactId>
	            							maven-compiler-plugin
	            						</artifactId>
	            						<versionRange>
	            							[3.8.0,)
	            						</versionRange>
	            						<goals>
	            							<goal>compile</goal>
	            						</goals>
	            					</pluginExecutionFilter>
	            					<action>
	            						<execute><runOnIncremental>false</runOnIncremental></execute>
	            					</action>
	            				</pluginExecution>
	            			</pluginExecutions>
	            		</lifecycleMappingMetadata>
	            	</configuration>
	            </plugin>
	        </plugins>
        </pluginManagement>
    </build>

    <pluginRepositories>
        <pluginRepository>
            <id>bintray</id>
            <name>Groovy Bintray</name>
            <url>https://dl.bintray.com/groovy/maven</url>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>